[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tester"
version = "0.1.0"
description = "A tool for automated testing using AI agents."
authors = [
    { name = "Tobiáš Růžička", email = "ruzictob@cvut.cz" }
]
dependencies = [
    "click",
    "docker",
    "openai",
    "langchain",
    "langchain-community",
    "langchain_google_genai",
    "llama-cpp-python",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tester = "tester.cli:cli"
