[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tester"
version = "0.1.0"
description = "A tool for automated testing using AI agents."
authors = [
    { name = "Tobiáš Růžička", email = "ruzictob@cvut.cz" }
]
dependencies = [
    "click",
    "docker",
    "openai",
    "langgraph",
    "langchain",
    "langchain-community",
    "langchain_google_genai",
    "llama-cpp-python",
    "huggingface-hub",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tester = "tester.cli:cli"
